# Zapateria_Chihuahua

./: .gitignore  README.md  admin.html  botas-seguridad.html  ejecutar-zapateria-local.bat  index.html  inventory-site-data.js  local-admin-server.ps1  product-admin-data.js  producto.html  pyproject.toml  script.js  styles.css  tenis-seguridad.html
img/: LEEME.txt  desktop.ini
src/ocr_engine/: __init__.py  cli.py  models.py  pdf_ocr.py
src/ocr_engine/engines/: tesseract_cli.py
src/ocr_engine/web/: __init__.py  app.py
src/ocr_engine/web/static/: styles.css
src/ocr_engine/web/templates/: index.html  result.html
tests/: test_models.py  test_pdf_ocr.py
