[project]
name = "torah-yehoshua-ocr"
version = "0.1.0"
description = "Local OCR document scanner engine with a Tesseract backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
ocr-scan = "ocr_engine.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
