[project]
name = "torah-yehoshua-ocr"
version = "0.1.0"
description = "Local OCR document scanner engine with a Tesseract backend."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
web = [
  "Flask>=3.0",
  "ocrmypdf>=17.4",
  "pypdfium2>=5.7",
]

dev = [
  "pytest>=8.0",
]

[project.scripts]
ocr-scan = "ocr_engine.cli:main"
ocr-web = "ocr_engine.web.app:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
